--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <!--body used for displaying comment-->   
     <body>
         welcome to codinal... in the journey of coding
+        <p> let's go to codinal <a href="https://www.codingal.com"> links for Coding </a> </p>
     </body>
 </html> 
