--- a/Media.html
+++ b/Media.html
@@ -6,7 +6,7 @@
     <body>
         <!--image-->
         <h1>HTML image</h1>
-         <img scr="messi.png file" alt="Messi" width="400" height="400">
+         <img scr="messi.png file" alt="Messi" width="400" height="400"></img>
 
 
          <!--audio and video-->
