--- a/form_1.html
+++ b/form_1.html
@@ -8,7 +8,11 @@
             <fieldset>
             <legend>Personal Details</legend>
             
-            <label> Enter name</label>
+            
+            <label> Fisrt name</label>
+            <input type="text" id="name"><br><br>
+
+            <label> Last name</label>
             <input type="text" id="name"><br><br>
 
             <label>Email</label>
@@ -16,6 +20,12 @@
 
             <label>Password</label>
             <input type="password" id="password"><br><br>
+
+            <label>Age</label>
+            <input type="Age" id="Age"><br><br>
+
+            <label>Birthday</label>
+            <input type="Birthday" id="Birthday"><br><br>
 
             <label>Gender</label>
             <input type="radio" id="gender" name="gender" value="female"> Female
