--- a/index.html
+++ b/index.html
@@ -9,3 +9,6 @@
         <p> let's go to codinal <a href="https://www.codingal.com"> links for Coding </a> </p>
     </body>
 </html> 
+<!--types of lists-->
+<h1>HTML List</h1>
+<h2></h2>
