--- a/My story.html
+++ b/My story.html
@@ -19,7 +19,7 @@
             <legend>How its gonna be in the future</legend>
 
             <label>where am I going to be</label>
-            <input type="text" id="text"
+            <input type="text" id="text"><br><br>
         </fieldset>
 
     </body>
